--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.545.0",
-    "next": "15.5.4",
+    "next": "^16.1.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
